recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:6: error: type mismatch;
 found   : Int(1)
 required: String
  return last(l.tail+1)
                     ^